--- a/css/index.css
+++ b/css/index.css
@@ -25,7 +25,7 @@
         margin: 0;
     }
     .rule{
-        background-color: black;
+        background-color: blue;
         border: 1px solid black;
         margin-top: 1em;
         margin-bottom: 1em;
